Documentation edits made through Mintlify web editor

--- a/installation.mdx
+++ b/installation.mdx
@@ -33,7 +33,7 @@ chmod +x setup.sh
 To install the main T-Guard components, follow instructions below.
 
 <Frame caption="Figure 1. T-Guard Installer Main Menu">
-  ![Main Menu Pn](/images/main-menu.png)
+  ![Main Menu Pn](/images/main-menu-new.png)
 </Frame>
 
 ## **Step 1: Update System and Install Prerequisites**
