Documentation edits made through Mintlify web editor

--- a/installation.mdx
+++ b/installation.mdx
@@ -232,13 +232,13 @@ To obtain the URL, follow the instructions below.
 - Paste it to the installation terminal, then press **Enter**. Wait until the process is finished.
 - Go back to the Shuffle, click the **Start** button as illustrated below.
 
-![Webhook6 Pn](/images/webhook-start.png)
+![Webhook6 Pn](/images/webhook-start.jpeg)
 
 - Next, select the **Shuffle** module in the middle panel, then it will show up the configuration panel on the right.
   - In the "Find Actions" parameter, make sure to select '**Repeat back to me**'.
   - In the "Call" parameter, change the value to `$exec`, then click the **Save** button, as illustrated below.
 
-  ![Webhook7 Pn](/images/webhook-node.png)
+  ![Webhook7 Pn](/images/webhook-node.jpeg)
 
 Click the **Test Execution** button (play icon).
 
