--- a/installation.mdx
+++ b/installation.mdx
@@ -33,7 +33,12 @@ chmod +x setup.sh
 To install the main T-Guard components, follow instructions below.
 
 <Frame caption="Figure 1. T-Guard Installer Main Menu">
-  ![Main Menu Pn](/images/main-menu-new.png)
+  <img
+    src="/images/main-menu-new.png"
+    alt="Main Menu Pn"
+    title="Main Menu Pn"
+    style={{ width:"100%" }}
+  />
 </Frame>
 
 ## **Step 1: Update System and Install Prerequisites**
@@ -66,31 +71,61 @@ If you are using a cloud-based virtual machine, such as Google Cloud Platform (G
 The installation process will start sequentially, beginning with Wazuh (include deploy initial wazuh agent), followed by Shuffle, IRIS, and MISP, as shown in Figure 3, 4, 5, and 6, respectively.
 
 <Frame caption="Figure 3. Wazuh Installation">
-  ![Wazuh Inst Pn](/images/Wazuh-Installation.png)
+  <img
+    src="/images/Wazuh-Installation.png"
+    alt="Wazuh Inst Pn"
+    title="Wazuh Inst Pn"
+    style={{ width:"100%" }}
+  />
 </Frame>
 
 <Frame caption="Figure 4. Shuffle Installation">
-  ![Shuffle Inst Pn](/images/Shuffle-Installation.png)
+  <img
+    src="/images/Shuffle-Installation.png"
+    alt="Shuffle Inst Pn"
+    title="Shuffle Inst Pn"
+    style={{ width:"100%" }}
+  />
 </Frame>
 
 <Frame caption="Figure 5. IRIS-DFIR Instalation">
-  ![Iris Inst Pn](/images/IRIS-Installation.png)
+  <img
+    src="/images/IRIS-Installation.png"
+    alt="Iris Inst Pn"
+    title="Iris Inst Pn"
+    style={{ width:"100%" }}
+  />
 </Frame>
 
 <Frame caption="Figure 6. MISP Installation">
-  ![Misp Inst Pn](/images/MISP-Installation.png)
+  <img
+    src="/images/MISP-Installation.png"
+    alt="Misp Inst Pn"
+    title="Misp Inst Pn"
+    style={{ width:"100%" }}
+  />
 </Frame>
 
 Once the process is complete, a table will appear displaying dashboard access details and credentials for each module, as shown in Figure 7.
 
 <Frame caption="Figure 7. Dashboard Access and Default Credentials">
-  ![Dashboard Pn](/images/Dashboard-Access.png)
+  <img
+    src="/images/Dashboard-Access.png"
+    alt="Dashboard Pn"
+    title="Dashboard Pn"
+    style={{ width:"100%" }}
+  />
 </Frame>
 
 Open your browser and follow the link to access your dashboard.
 
 <Frame caption="Figure 8. Warning Page">
-  ![Image(4) Pn](/images/Warning-page.png)
+  <img
+    src="/images/Warning-page.png"
+    alt="Image(4) Pn"
+    title="Image(4) Pn"
+    style={{ width:"100%" }}
+  />
 </Frame>
 
 You will see a warning from the browser that the certificate is invalid as illustrated in Figure 8. This is normal because we haven’t installed the signed SSL certificate, which is recommended for production. For now, just click proceed.
@@ -98,13 +133,23 @@ You will see a warning from the browser that the certificate is invalid as illus
 The first page of Wazuh should be as illustrated in Figure 9.
 
 <Frame caption="Figure 9. Wazuh Login Page">
-  ![Image(2) Avi](/images/wazuh-dashboard.png)
+  <img
+    src="/images/wazuh-dashboard.png"
+    alt="Image(2) Avi"
+    title="Image(2) Avi"
+    style={{ width:"100%" }}
+  />
 </Frame>
 
 Log in using **above mentioned credentials**. After log in, you should see Figure 10.
 
 <Frame caption="Figure 10. Wazuh Dashboard">
-  ![Image(5) Pn](/images/image\(5\).png)
+  <img
+    src="/images/image(5).png"
+    alt="Image(5) Pn"
+    title="Image(5) Pn"
+    style={{ width:"100%" }}
+  />
 </Frame>
 
 Next, open Shuffle dashboard.
@@ -112,7 +157,12 @@ Next, open Shuffle dashboard.
 Create administrator account using **above mentioned credentials** and then login using the same credentials. After logged in, you should see Figure 11.
 
 <Frame caption="Figure 11. Shuffle Dashboard">
-  ![Image(6) Pn](/images/shuffle-dashboard.png)
+  <img
+    src="/images/shuffle-dashboard.png"
+    alt="Image(6) Pn"
+    title="Image(6) Pn"
+    style={{ width:"100%" }}
+  />
 </Frame>
 
 Next, open IRIS dashboard.
@@ -120,7 +170,12 @@ Next, open IRIS dashboard.
 Sign in using **above mentioned credentials**. After logged in, you should see Figure 12.
 
 <Frame caption="Figure 12. IRIS Dashboard">
-  ![Image(3) Avi](/images/iris-dashboards.png)
+  <img
+    src="/images/iris-dashboards.png"
+    alt="Image(3) Avi"
+    title="Image(3) Avi"
+    style={{ width:"100%" }}
+  />
 </Frame>
 
 Next, open MISP dashboard.
@@ -128,7 +183,12 @@ Next, open MISP dashboard.
 Sign in using **above mentioned credentials**. After logged in, you should see Figure 13.
 
 <Frame caption="Figure 13. MISP Dashboard">
-  ![Image(7) Pn](/images/misp-dashboard.png)
+  <img
+    src="/images/misp-dashboard.png"
+    alt="Image(7) Pn"
+    title="Image(7) Pn"
+    style={{ width:"100%" }}
+  />
 </Frame>
 
 ### **Credential Summary – T-Guard Modules**
@@ -147,7 +207,12 @@ In the **Main Menu**, type ‘**3**’ and press Enter.
 The system will prompt you to enter the IRIS API key, as shown in Figure 14.
 
 <Frame caption="Figure 14. Input API KEY">
-  ![Iris Wazuh Int Pn](/images/iris-int-wazuh.png)
+  <img
+    src="/images/iris-int-wazuh.png"
+    alt="Iris Wazuh Int Pn"
+    title="Iris Wazuh Int Pn"
+    style={{ width:"100%" }}
+  />
 </Frame>
 
 To obtain it, navigate to the IRIS page, select the Administrator profile, then go to **My Settings**.
@@ -162,13 +227,23 @@ To obtain it, navigate to the IRIS page, select the Administrator profile, then 
 
 The API key will be displayed.
 
-![IRIS API Key Display](/images/iris-api-key.png)
+<img
+  src="/images/iris-api-key.png"
+  alt="IRIS API Key Display"
+  title="IRIS API Key Display"
+  style={{ width:"100%" }}
+/>
 
 Copy and paste it to the installation, then press **Enter**. Wait until the process is finished.
 
 During the installation process, you will be prompted to enter several integration parameters. Please follow the instructions below carefully.
 
-![Integration Parameters](/images/integration-prompt.png)
+<img
+  src="/images/integration-prompt.png"
+  alt="Integration Parameters"
+  title="Integration Parameters"
+  style={{ width:"100%" }}
+/>
 
 # Shuffle Webhook URL
 Then, you’ll be prompted to enter your Shuffle Webhook URL.
@@ -227,18 +302,33 @@ To obtain the URL, follow the instructions below.
 - Click on **Webhook** module, then it will show up the configuration panel on the right.
   - In the "Webhook URL" parameter, manually copy the URL by **highlighting it until the end of the url**, then press **Ctrl+C**.
 
-![Webhook5 Pn](/images/webhook-url.jpeg)
+<img
+  src="/images/webhook-url.jpeg"
+  alt="Webhook5 Pn"
+  title="Webhook5 Pn"
+  style={{ width:"100%" }}
+/>
 
 - Paste it to the installation terminal, then press **Enter**. Wait until the process is finished.
 - Go back to the Shuffle, click the **Start** button as illustrated below.
 
-![Webhook6 Pn](/images/webhook-start.jpeg)
+<img
+  src="/images/webhook-start.jpeg"
+  alt="Webhook6 Pn"
+  title="Webhook6 Pn"
+  style={{ width:"100%" }}
+/>
 
 - Next, select the **Shuffle** module in the middle panel, then it will show up the configuration panel on the right.
   - In the "Find Actions" parameter, make sure to select '**Repeat back to me**'.
   - In the "Call" parameter, change the value to `$exec`, then click the **Save** button, as illustrated below.
 
-  ![Webhook7 Pn](/images/webhook-node.jpeg)
+<img
+  src="/images/webhook-node.jpeg"
+  alt="Webhook7 Pn"
+  title="Webhook7 Pn"
+  style={{ width:"100%" }}
+/>
 
 Click the **Test Execution** button (play icon).
 
@@ -262,13 +352,23 @@ Select **Run without Runtime Argument**.
 
 Then, you'll see the All Workflow Runs panel on the right side.
 
-![Shuffle Pn](/images/shuffle-run.jpeg)
+<img
+  src="/images/shuffle-run.jpeg"
+  alt="Shuffle Pn"
+  title="Shuffle Pn"
+  style={{ width:"100%" }}
+/>
 
 Next, on the left panel, select Apps tab, type **IRIS** in the Search Active Apps bar. Just click the **IRIS V2** (not IRIS V2 Fork), and wait until the **IRIS v2** is show up
 
 Then drag it to the middle panel as illustrated below.
 
-![Iris Pn](/images/iris-workflow.jpeg)
+<img
+  src="/images/iris-workflow.jpeg"
+  alt="Iris Pn"
+  title="Iris Pn"
+  style={{ width:"100%" }}
+/>
 
 Click IRIS Module, then fill the following parameters:
 
@@ -324,11 +424,21 @@ After authentication is successfully configured, continue with the action setup.
 
 Choose the Advanced on the right side, and click the Expand Window Button.
 
-![Delapan Pn](/images/iris-advanced.jpeg)
+<img
+  src="/images/iris-advanced.jpeg"
+  alt="Delapan Pn"
+  title="Delapan Pn"
+  style={{ width:"100%" }}
+/>
 
 Scroll down to the Body parameter, and click the Expand Window button.
 
-![Iris2 Pn](/images/iris-body.jpeg)
+<img
+  src="/images/iris-body.jpeg"
+  alt="Iris2 Pn"
+  title="Iris2 Pn"
+  style={{ width:"100%" }}
+/>
 
 Change the body content with the following:
 
@@ -366,7 +476,12 @@ Then, click **Save** button.
 
 Click the **Show Executions** button to open the **All Workflow Runs** panel. You should see alerts from Wazuh listed here.
 
-![Iris Shuffle Pn](/images/iris-output.png)
+<img
+  src="/images/iris-output.png"
+  alt="Iris Shuffle Pn"
+  title="Iris Shuffle Pn"
+  style={{ width:"100%" }}
+/>
 
 Then, click on the alerts with the following icon.
 
@@ -400,7 +515,12 @@ It should be exist the IRIS process. Inside the IRIS module, the Status value sh
 
 We can also check in the IRIS page (**https://\<your_ip\>:8443**), select **Manage Case** tab on the left panel. We can see the ticket created from Shuffle exists.
 
-![Duabelas Avi](/images/iris-case.png)
+<img
+  src="/images/iris-case.png"
+  alt="Duabelas Avi"
+  title="Duabelas Avi"
+  style={{ width:"100%" }}
+/>
 
 # Virus Total API Key
 Then, you’ll be prompted to enter your VirusTotal API key.
@@ -443,13 +563,33 @@ To obtain the MISP API key:
   3. Copy an existing key or create a new one
   4. Paste the key into the terminal
 
-![MISP Dashboard](/images/misp-dashboard.png)
+<img
+  src="/images/misp-dashboard.png"
+  alt="MISP Dashboard"
+  title="MISP Dashboard"
+  style={{ width:"100%" }}
+/>
 
-![MISP List Auth Key](/images/misp-list-auth-key.png)
+<img
+  src="/images/misp-list-auth-key.png"
+  alt="MISP List Auth Key"
+  title="MISP List Auth Key"
+  style={{ width:"100%" }}
+/>
 
-![MISP Add Auth](/images/misp-add-authentication.png)
+<img
+  src="/images/misp-add-authentication.png"
+  alt="MISP Add Auth"
+  title="MISP Add Auth"
+  style={{ width:"100%" }}
+/>
 
-![MISP Add Auth Key](/images/misp-add-auth.png)
+<img
+  src="/images/misp-add-auth.png"
+  alt="MISP Add Auth Key"
+  title="MISP Add Auth Key"
+  style={{ width:"100%" }}
+/>
 
 ## MISP Default Feed Data (JSON)
 
@@ -470,11 +610,26 @@ After configuring the MISP API key, the next step is to **add the default MISP f
 4. Paste the copied JSON content into the input field.
 5. Click **Add** to import the feed configuration.
 
-![MISP Data Feed](/images/misp-data-feed.png)
+<img
+  src="/images/misp-data-feed.png"
+  alt="MISP Data Feed"
+  title="MISP Data Feed"
+  style={{ width:"100%" }}
+/>
 
-![MISP Feeds](/images/misp-feeds.png)
+<img
+  src="/images/misp-feeds.png"
+  alt="MISP Feeds"
+  title="MISP Feeds"
+  style={{ width:"100%" }}
+/>
 
-![MISP Import](/images/misp-import.png)
+<img
+  src="/images/misp-import.png"
+  alt="MISP Import"
+  title="MISP Import"
+  style={{ width:"100%" }}
+/>
 
 
 ### Enable and Fetch Feed Data
@@ -484,7 +639,12 @@ After configuring the MISP API key, the next step is to **add the default MISP f
 3. Click **Enable Selected** to activate the data sources.
 4. Click **Fetch and Store All Feed Data** to download threat intelligence data from each feed source.
 
-![MISP Checklist](/images/misp-checklist.png)
+<img
+  src="/images/misp-checklist.png"
+  alt="MISP Checklist"
+  title="MISP Checklist"
+  style={{ width:"100%" }}
+/>
 
 > This process may take several minutes depending on the number of feeds and network conditions.
 
@@ -495,9 +655,19 @@ After configuring the MISP API key, the next step is to **add the default MISP f
 - Retrieved threat intelligence events can be viewed under **Event Actions**.
 - Attributes generated from each event can be reviewed in **List Attributes**.
 
-![MISP List Events](/images/misp-list-events.png)
+<img
+  src="/images/misp-list-events.png"
+  alt="MISP List Events"
+  title="MISP List Events"
+  style={{ width:"100%" }}
+/>
 
-![MISP List Events](/images/misp-list-attributes.png)
+<img
+  src="/images/misp-list-attributes.png"
+  alt="MISP List Attributes"
+  title="MISP List Attributes"
+  style={{ width:"100%" }}
+/>
 
 These attributes are used as **IOC lookup values by Wazuh**, enabling correlation between detected events and known threat indicators.
 
@@ -521,7 +691,12 @@ https://192.168.0.108
 
 # Use Case
 
-![Main Menu Pn](/images/main-menu.png)
+<img
+  src="/images/main-menu.png"
+  alt="Main Menu Pn"
+  title="Main Menu Pn"
+  style={{ width:"100%" }}
+/>
 
 In the **Main Menu**, type ‘**4**’ and press Enter.
 
@@ -537,13 +712,23 @@ In the **Main Menu**, type ‘**4**’ and press Enter.
 
 In the **PoC Menu**, type ‘**1**’ and press Enter.
 
-![Poc 1 Pn](/images/poc-1.png)
+<img
+  src="/images/poc-1.png"
+  alt="Poc 1 Pn"
+  title="Poc 1 Pn"
+  style={{ width:"100%" }}
+/>
 
 If prompted to continue connecting, type **yes** and press **Enter**.
 
 Multiple login attempts have been recorded in the Wazuh security events, indicating a potential security threat.
 
-![Brute Force Pn](/images/brute-force.png)
+<img
+  src="/images/brute-force.png"
+  alt="Brute Force Pn"
+  title="Brute Force Pn"
+  style={{ width:"100%" }}
+/>
 
 These events will be closely monitored and analyzed by the security operations center (SOC) team to determine the source of the attempts and take appropriate action to mitigate any potential risk.
 
@@ -555,11 +740,21 @@ Open your Wazuh page (**https://\<your_ip\>**).
 
 It would be appear an event about VirusTotal detect the malware, the deletion of the file, and the activated response regarding to the malware, illustrated below.
 
-![Zero Avi](/images/zero.avif)
+<img
+  src="/images/zero.avif"
+  alt="Zero Avi"
+  title="Zero Avi"
+  style={{ width:"100%" }}
+/>
 
 We can also check in the IRIS to see the ticket that automatic created
 
-![One Pn](/images/one.png)
+<img
+  src="/images/one.png"
+  alt="One Pn"
+  title="One Pn"
+  style={{ width:"100%" }}
+/>
 
 ## **Use Case 3: Web Defacement Detection**
 
@@ -567,12 +762,27 @@ In the **PoC Menu**, type ‘**3**’ and press Enter.
 
 Before simulate the web defacement, open the given link (**http://\<your_ip\>:3000**) in your browser. It will direct you to the example website that created by the script.
 
-![Two Pn](/images/two.png)
+<img
+  src="/images/two.png"
+  alt="Two Pn"
+  title="Two Pn"
+  style={{ width:"100%" }}
+/>
 
 Then, start the web defacement. It will change the website appearance.
 
-![Three Pn](/images/three.png)
+<img
+  src="/images/three.png"
+  alt="Three Pn"
+  title="Three Pn"
+  style={{ width:"100%" }}
+/>
 
 We can see in the Wazuh for the detection of file content changes. The rule id is 550 with the description is Integrity Checksum Changed.
 
-![Four Pn](/images/four.png)
+<img
+  src="/images/four.png"
+  alt="Four Pn"
+  title="Four Pn"
+  style={{ width:"100%" }}
+/>
