--- a/installation.mdx
+++ b/installation.mdx
@@ -217,43 +217,50 @@ The system will prompt you to enter the IRIS API key, as shown in Figure 14.
 
 To obtain it, navigate to the IRIS page, select the Administrator profile, then go to **My Settings**.
 
-<img
-  src="/images/iris-int-wazuh2.png"
-  alt="Iris Wazuh Int2 Pn"
-  title="Iris Wazuh Int2 Pn"
-  className="mx-auto"
-  style={{ width:"66%" }}
-/>
+<Frame>
+  <img
+    src="/images/iris-int-wazuh2.png"
+    alt="Iris Wazuh Int2 Pn"
+    title="Iris Wazuh Int2 Pn"
+    style={{ width:"66%", margin:"auto" }}
+  />
+</Frame>
 
 The API key will be displayed.
 
-<img
-  src="/images/iris-api-key.png"
-  alt="IRIS API Key Display"
-  title="IRIS API Key Display"
-  style={{ width:"100%" }}
-/>
+<Frame>
+  <img
+    src="/images/iris-api-key.png"
+    alt="IRIS API Key Display"
+    title="IRIS API Key Display"
+    style={{ width:"100%" }}
+  />
+</Frame>
 
 Copy and paste it to the installation, then press **Enter**. Wait until the process is finished.
 
 During the installation process, you will be prompted to enter several integration parameters. Please follow the instructions below carefully.
 
-<img
-  src="/images/integration-prompt.png"
-  alt="Integration Parameters"
-  title="Integration Parameters"
-  style={{ width:"100%" }}
-/>
+<Frame>
+  <img
+    src="/images/integration-prompt.png"
+    alt="Integration Parameters"
+    title="Integration Parameters"
+    style={{ width:"100%" }}
+  />
+</Frame>
 
 # Shuffle Webhook URL
 Then, you’ll be prompted to enter your Shuffle Webhook URL.
 
-<img
-  src="/images/shuffle-integration.png"
-  alt="Webhook4 Pn"
-  title="Webhook4 Pn"
-  style={{ width:"49%" }}
-/>
+<Frame>
+  <img
+    src="/images/shuffle-integration.png"
+    alt="Webhook4 Pn"
+    title="Webhook4 Pn"
+    style={{ width:"49%", margin:"auto" }}
+  />
+</Frame>
 
 To obtain the URL, follow the instructions below.
 
@@ -267,108 +274,123 @@ To obtain the URL, follow the instructions below.
 
 ### Step 1: Create a New Workflow
 
-<img
-  src="/images/shuffle-workflow-create.png"
-  alt="Creating a new workflow in Shuffle"
-  title="Shuffle Create Workflow"
-  width="70%"
-  style="display:block;margin:auto;"
-/>
+<Frame>
+  <img
+    src="/images/shuffle-workflow-create.png"
+    alt="Creating a new workflow in Shuffle"
+    title="Shuffle Create Workflow"
+    style={{ width:"70%", margin:"auto" }}
+  />
+</Frame>
 
 ---
 
 ### Step 2: Select Create from Scratch
 
-<img
-  src="/images/shuffle-create-from-scratch.png"
-  alt="Create workflow from scratch in Shuffle"
-  title="Shuffle Create from Scratch"
-  width="70%"
-  style="display:block;margin:auto;"
-/>
+<Frame>
+  <img
+    src="/images/shuffle-create-from-scratch.png"
+    alt="Create workflow from scratch in Shuffle"
+    title="Shuffle Create from Scratch"
+    style={{ width:"70%", margin:"auto" }}
+  />
+</Frame>
 
 ---
 
 ### Step 3: Add Webhook Trigger
 
-<img
-  src="/images/shuffle-webhook-trigger.png"
-  alt="Adding webhook trigger in Shuffle workflow"
-  title="Shuffle Webhook Trigger"
-  width="70%"
-  style="display:block;margin:auto;"
-/>
+<Frame>
+  <img
+    src="/images/shuffle-webhook-trigger.png"
+    alt="Adding webhook trigger in Shuffle workflow"
+    title="Shuffle Webhook Trigger"
+    style={{ width:"70%", margin:"auto" }}
+  />
+</Frame>
 
 - Click on **Webhook** module, then it will show up the configuration panel on the right.
   - In the "Webhook URL" parameter, manually copy the URL by **highlighting it until the end of the url**, then press **Ctrl+C**.
 
-<img
-  src="/images/webhook-url.jpeg"
-  alt="Webhook5 Pn"
-  title="Webhook5 Pn"
-  style={{ width:"100%" }}
-/>
+<Frame>
+  <img
+    src="/images/webhook-url.jpeg"
+    alt="Webhook5 Pn"
+    title="Webhook5 Pn"
+    style={{ width:"100%" }}
+  />
+</Frame>
 
 - Paste it to the installation terminal, then press **Enter**. Wait until the process is finished.
 - Go back to the Shuffle, click the **Start** button as illustrated below.
 
-<img
-  src="/images/webhook-start.jpeg"
-  alt="Webhook6 Pn"
-  title="Webhook6 Pn"
-  style={{ width:"100%" }}
-/>
+<Frame>
+  <img
+    src="/images/webhook-start.jpeg"
+    alt="Webhook6 Pn"
+    title="Webhook6 Pn"
+    style={{ width:"100%" }}
+  />
+</Frame>
 
 - Next, select the **Shuffle** module in the middle panel, then it will show up the configuration panel on the right.
   - In the "Find Actions" parameter, make sure to select '**Repeat back to me**'.
   - In the "Call" parameter, change the value to `$exec`, then click the **Save** button, as illustrated below.
 
-<img
-  src="/images/webhook-node.jpeg"
-  alt="Webhook7 Pn"
-  title="Webhook7 Pn"
-  style={{ width:"100%" }}
-/>
+<Frame>
+  <img
+    src="/images/webhook-node.jpeg"
+    alt="Webhook7 Pn"
+    title="Webhook7 Pn"
+    style={{ width:"100%" }}
+  />
+</Frame>
 
 Click the **Test Execution** button (play icon).
 
-<img
-  src="/images/test-icon.png"
-  alt="Play Pn"
-  title="Play Pn"
-  className="mx-auto"
-  style={{ width:"20%" }}
-/>
+<Frame>
+  <img
+    src="/images/test-icon.png"
+    alt="Play Pn"
+    title="Play Pn"
+    style={{ width:"20%", margin:"auto" }}
+  />
+</Frame>
 
 Select **Run without Runtime Argument**.
 
-<img
-  src="/images/run-argument.png"
-  alt="Run Anyway Pn"
-  title="Run Anyway Pn"
-  className="mx-auto"
-  style={{ width:"80%" }}
-/>
+<Frame>
+  <img
+    src="/images/run-argument.png"
+    alt="Run Anyway Pn"
+    title="Run Anyway Pn"
+    style={{ width:"80%", margin:"auto" }}
+  />
+</Frame>
 
 Then, you'll see the All Workflow Runs panel on the right side.
 
-<img
-  src="/images/shuffle-run.jpeg"
-  alt="Shuffle Pn"
-  title="Shuffle Pn"
-  style={{ width:"100%" }}
-/>
+<Frame>
+  <img
+    src="/images/shuffle-run.jpeg"
+    alt="Shuffle Pn"
+    title="Shuffle Pn"
+    style={{ width:"100%" }}
+  />
+</Frame>
 
 Next, on the left panel, select Apps tab, type **IRIS** in the Search Active Apps bar. Just click the **IRIS V2** (not IRIS V2 Fork), and wait until the **IRIS v2** is show up
 
 Then drag it to the middle panel as illustrated below.
 
-<img
-  src="/images/iris-workflow.jpeg"
-  alt="Iris Pn"
-  title="Iris Pn"
-  style={{ width:"100%" }}
-/>
+<Frame>
+  <img
+    src="/images/iris-workflow.jpeg"
+    alt="Iris Pn"
+    title="Iris Pn"
+    style={{ width:"100%" }}
+  />
+</Frame>
 
 Click IRIS Module, then fill the following parameters:
 
@@ -390,21 +412,23 @@ Before proceeding to the **Advanced** settings on the right side, you must first
 6. Click **Submit**.
 7. Ensure the authentication status shows **Valid**.
 
-<img
-  src="/images/iris-add-authentication.jpeg"
-  alt="Adding IRIS authentication in Shuffle"
-  title="Add IRIS Authentication"
-  width="70%"
-  style="display:block;margin:auto;"
-/>
+<Frame>
+  <img
+    src="/images/iris-add-authentication.jpeg"
+    alt="Adding IRIS authentication in Shuffle"
+    title="Add IRIS Authentication"
+    style={{ width:"70%", margin:"auto" }}
+  />
+</Frame>
 
-<img
-  src="/images/iris-authentication.jpeg"
-  alt="IRIS authentication configuration with API key and URL"
-  title="IRIS Authentication Configuration"
-  width="70%"
-  style="display:block;margin:auto;"
-/>
+<Frame>
+  <img
+    src="/images/iris-authentication.jpeg"
+    alt="IRIS authentication configuration with API key and URL"
+    title="IRIS Authentication Configuration"
+    style={{ width:"70%", margin:"auto" }}
+  />
+</Frame>
 
 ---
 
@@ -424,21 +448,25 @@ After authentication is successfully configured, continue with the action setup.
 
 Choose the Advanced on the right side, and click the Expand Window Button.
 
-<img
-  src="/images/iris-advanced.jpeg"
-  alt="Delapan Pn"
-  title="Delapan Pn"
-  style={{ width:"100%" }}
-/>
+<Frame>
+  <img
+    src="/images/iris-advanced.jpeg"
+    alt="Delapan Pn"
+    title="Delapan Pn"
+    style={{ width:"100%" }}
+  />
+</Frame>
 
 Scroll down to the Body parameter, and click the Expand Window button.
 
-<img
-  src="/images/iris-body.jpeg"
-  alt="Iris2 Pn"
-  title="Iris2 Pn"
-  style={{ width:"100%" }}
-/>
+<Frame>
+  <img
+    src="/images/iris-body.jpeg"
+    alt="Iris2 Pn"
+    title="Iris2 Pn"
+    style={{ width:"100%" }}
+  />
+</Frame>
 
 Change the body content with the following:
 
@@ -466,22 +494,25 @@ After that, click **Submit** button on the bottom right.
 
 Then, click **Save** button.
 
-<img
-  src="/images/save-workflow.png"
-  alt="Save Pn"
-  title="Save Pn"
-  className="mx-auto"
-  style={{ width:"20%" }}
-/>
+<Frame>
+  <img
+    src="/images/save-workflow.png"
+    alt="Save Pn"
+    title="Save Pn"
+    style={{ width:"20%", margin:"auto" }}
+  />
+</Frame>
 
 Click the **Show Executions** button to open the **All Workflow Runs** panel. You should see alerts from Wazuh listed here.
 
-<img
-  src="/images/iris-output.png"
-  alt="Iris Shuffle Pn"
-  title="Iris Shuffle Pn"
-  style={{ width:"100%" }}
-/>
+<Frame>
+  <img
+    src="/images/iris-output.png"
+    alt="Iris Shuffle Pn"
+    title="Iris Shuffle Pn"
+    style={{ width:"100%" }}
+  />
+</Frame>
 
 Then, click on the alerts with the following icon.
 
@@ -497,30 +528,36 @@ If there’s nothing available yet, run the Brute-Force Simulation which is expl
 
 Then, click **Refresh** button as illustrated below.
 
-<img
-  src="/images/iris-refresh.jpeg"
-  alt="Sepuluh Pn"
-  className="mx-auto"
-  style={{ width:"47%" }}
-/>
+<Frame>
+  <img
+    src="/images/iris-refresh.jpeg"
+    alt="Sepuluh Pn"
+    title="Sepuluh Pn"
+    style={{ width:"47%", margin:"auto" }}
+  />
+</Frame>
 
 It should be exist the IRIS process. Inside the IRIS module, the Status value should be 200, means that the automation of ticket creation is success, as illustrated below.
 
-<img
-  src="/images/output-iris-workflow.png"
-  alt="Sebelas Pn"
-  className="mx-auto"
-  style={{ width:"52%" }}
-/>
+<Frame>
+  <img
+    src="/images/output-iris-workflow.png"
+    alt="Sebelas Pn"
+    title="Sebelas Pn"
+    style={{ width:"52%", margin:"auto" }}
+  />
+</Frame>
 
 We can also check in the IRIS page (**https://\<your_ip\>:8443**), select **Manage Case** tab on the left panel. We can see the ticket created from Shuffle exists.
 
-<img
-  src="/images/iris-case.png"
-  alt="Duabelas Avi"
-  title="Duabelas Avi"
-  style={{ width:"100%" }}
-/>
+<Frame>
+  <img
+    src="/images/iris-case.png"
+    alt="Duabelas Avi"
+    title="Duabelas Avi"
+    style={{ width:"100%" }}
+  />
+</Frame>
 
 # Virus Total API Key
 Then, you’ll be prompted to enter your VirusTotal API key.
@@ -530,12 +567,14 @@ https://www.virustotal.com/
 
 If you already have an account, log in, click your profile name, and select ‘API Key’ to view it.
 Copy and paste it to the installation, then press Enter. Wait until the process is finished.
-<img
-  src="/images/virustotalapi.png"
-  alt="Virustotalapi Pn"
-  title="Virustotalapi Pn"
-  style={{ width:"68%" }}
-/>
+<Frame>
+  <img
+    src="/images/virustotalapi.png"
+    alt="Virustotalapi Pn"
+    title="Virustotalapi Pn"
+    style={{ width:"68%", margin:"auto" }}
+  />
+</Frame>
 
 
 # MISP Configuration
@@ -563,33 +602,41 @@ To obtain the MISP API key:
   3. Copy an existing key or create a new one
   4. Paste the key into the terminal
 
-<img
-  src="/images/misp-dashboard.png"
-  alt="MISP Dashboard"
-  title="MISP Dashboard"
-  style={{ width:"100%" }}
-/>
+<Frame caption="MISP Dashboard">
+  <img
+    src="/images/misp-dashboard.png"
+    alt="MISP Dashboard"
+    title="MISP Dashboard"
+    style={{ width:"100%" }}
+  />
+</Frame>
 
-<img
-  src="/images/misp-list-auth-key.png"
-  alt="MISP List Auth Key"
-  title="MISP List Auth Key"
-  style={{ width:"100%" }}
-/>
+<Frame caption="MISP List Auth Key">
+  <img
+    src="/images/misp-list-auth-key.png"
+    alt="MISP List Auth Key"
+    title="MISP List Auth Key"
+    style={{ width:"100%" }}
+  />
+</Frame>
 
-<img
-  src="/images/misp-add-authentication.png"
-  alt="MISP Add Auth"
-  title="MISP Add Auth"
-  style={{ width:"100%" }}
-/>
+<Frame caption="MISP Add Authentication">
+  <img
+    src="/images/misp-add-authentication.png"
+    alt="MISP Add Auth"
+    title="MISP Add Auth"
+    style={{ width:"100%" }}
+  />
+</Frame>
 
-<img
-  src="/images/misp-add-auth.png"
-  alt="MISP Add Auth Key"
-  title="MISP Add Auth Key"
-  style={{ width:"100%" }}
-/>
+<Frame caption="MISP Add Auth Key">
+  <img
+    src="/images/misp-add-auth.png"
+    alt="MISP Add Auth Key"
+    title="MISP Add Auth Key"
+    style={{ width:"100%" }}
+  />
+</Frame>
 
 ## MISP Default Feed Data (JSON)
 
@@ -610,26 +657,32 @@ After configuring the MISP API key, the next step is to **add the default MISP f
 4. Paste the copied JSON content into the input field.
 5. Click **Add** to import the feed configuration.
 
-<img
-  src="/images/misp-data-feed.png"
-  alt="MISP Data Feed"
-  title="MISP Data Feed"
-  style={{ width:"100%" }}
-/>
+<Frame caption="MISP Data Feed">
+  <img
+    src="/images/misp-data-feed.png"
+    alt="MISP Data Feed"
+    title="MISP Data Feed"
+    style={{ width:"100%" }}
+  />
+</Frame>
 
-<img
-  src="/images/misp-feeds.png"
-  alt="MISP Feeds"
-  title="MISP Feeds"
-  style={{ width:"100%" }}
-/>
+<Frame caption="MISP Feeds">
+  <img
+    src="/images/misp-feeds.png"
+    alt="MISP Feeds"
+    title="MISP Feeds"
+    style={{ width:"100%" }}
+  />
+</Frame>
 
-<img
-  src="/images/misp-import.png"
-  alt="MISP Import"
-  title="MISP Import"
-  style={{ width:"100%" }}
-/>
+<Frame caption="MISP Import">
+  <img
+    src="/images/misp-import.png"
+    alt="MISP Import"
+    title="MISP Import"
+    style={{ width:"100%" }}
+  />
+</Frame>
 
 
 ### Enable and Fetch Feed Data
@@ -639,12 +692,14 @@ After configuring the MISP API key, the next step is to **add the default MISP f
 3. Click **Enable Selected** to activate the data sources.
 4. Click **Fetch and Store All Feed Data** to download threat intelligence data from each feed source.
 
-<img
-  src="/images/misp-checklist.png"
-  alt="MISP Checklist"
-  title="MISP Checklist"
-  style={{ width:"100%" }}
-/>
+<Frame caption="MISP Checklist">
+  <img
+    src="/images/misp-checklist.png"
+    alt="MISP Checklist"
+    title="MISP Checklist"
+    style={{ width:"100%" }}
+  />
+</Frame>
 
 > This process may take several minutes depending on the number of feeds and network conditions.
 
@@ -655,19 +710,23 @@ After configuring the MISP API key, the next step is to **add the default MISP f
 - Retrieved threat intelligence events can be viewed under **Event Actions**.
 - Attributes generated from each event can be reviewed in **List Attributes**.
 
-<img
-  src="/images/misp-list-events.png"
-  alt="MISP List Events"
-  title="MISP List Events"
-  style={{ width:"100%" }}
-/>
+<Frame caption="MISP List Events">
+  <img
+    src="/images/misp-list-events.png"
+    alt="MISP List Events"
+    title="MISP List Events"
+    style={{ width:"100%" }}
+  />
+</Frame>
 
-<img
-  src="/images/misp-list-attributes.png"
-  alt="MISP List Attributes"
-  title="MISP List Attributes"
-  style={{ width:"100%" }}
-/>
+<Frame caption="MISP List Attributes">
+  <img
+    src="/images/misp-list-attributes.png"
+    alt="MISP List Attributes"
+    title="MISP List Attributes"
+    style={{ width:"100%" }}
+  />
+</Frame>
 
 These attributes are used as **IOC lookup values by Wazuh**, enabling correlation between detected events and known threat indicators.
 
@@ -691,24 +750,27 @@ https://192.168.0.108
 
 # Use Case
 
-<img
-  src="/images/main-menu.png"
-  alt="Main Menu Pn"
-  title="Main Menu Pn"
-  style={{ width:"100%" }}
-/>
+<Frame caption="Main Menu">
+  <img
+    src="/images/main-menu.png"
+    alt="Main Menu Pn"
+    title="Main Menu Pn"
+    style={{ width:"100%" }}
+  />
+</Frame>
 
 In the **Main Menu**, type ‘**4**’ and press Enter.
 
 ## **Use Case 1: Brute-Force Simulation**
 
-<img
-  src="/images/poc.png"
-  alt="Poc Pn"
-  title="Poc Pn"
-  className="mx-auto"
-  style={{ width:"55%" }}
-/>
+<Frame caption="PoC Menu">
+  <img
+    src="/images/poc.png"
+    alt="Poc Pn"
+    title="Poc Pn"
+    style={{ width:"55%", margin:"auto" }}
+  />
+</Frame>
 
 In the **PoC Menu**, type ‘**1**’ and press Enter.
 
@@ -723,12 +785,14 @@ If prompted to continue connecting, type **yes** and press **Enter**.
 
 Multiple login attempts have been recorded in the Wazuh security events, indicating a potential security threat.
 
-<img
-  src="/images/brute-force.png"
-  alt="Brute Force Pn"
-  title="Brute Force Pn"
-  style={{ width:"100%" }}
-/>
+<Frame caption="Wazuh Security Events">
+  <img
+    src="/images/brute-force.png"
+    alt="Brute Force Pn"
+    title="Brute Force Pn"
+    style={{ width:"100%" }}
+  />
+</Frame>
 
 These events will be closely monitored and analyzed by the security operations center (SOC) team to determine the source of the attempts and take appropriate action to mitigate any potential risk.
 
@@ -740,21 +804,25 @@ Open your Wazuh page (**https://\<your_ip\>**).
 
 It would be appear an event about VirusTotal detect the malware, the deletion of the file, and the activated response regarding to the malware, illustrated below.
 
-<img
-  src="/images/zero.avif"
-  alt="Zero Avi"
-  title="Zero Avi"
-  style={{ width:"100%" }}
-/>
+<Frame caption="VirusTotal Malware Detection">
+  <img
+    src="/images/zero.avif"
+    alt="Zero Avi"
+    title="Zero Avi"
+    style={{ width:"100%" }}
+  />
+</Frame>
 
 We can also check in the IRIS to see the ticket that automatic created
 
-<img
-  src="/images/one.png"
-  alt="One Pn"
-  title="One Pn"
-  style={{ width:"100%" }}
-/>
+<Frame caption="IRIS Ticket Created">
+  <img
+    src="/images/one.png"
+    alt="One Pn"
+    title="One Pn"
+    style={{ width:"100%" }}
+  />
+</Frame>
 
 ## **Use Case 3: Web Defacement Detection**
 
@@ -762,27 +830,33 @@ In the **PoC Menu**, type ‘**3**’ and press Enter.
 
 Before simulate the web defacement, open the given link (**http://\<your_ip\>:3000**) in your browser. It will direct you to the example website that created by the script.
 
-<img
-  src="/images/two.png"
-  alt="Two Pn"
-  title="Two Pn"
-  style={{ width:"100%" }}
-/>
+<Frame caption="Example Website Before Defacement">
+  <img
+    src="/images/two.png"
+    alt="Two Pn"
+    title="Two Pn"
+    style={{ width:"100%" }}
+  />
+</Frame>
 
 Then, start the web defacement. It will change the website appearance.
 
-<img
-  src="/images/three.png"
-  alt="Three Pn"
-  title="Three Pn"
-  style={{ width:"100%" }}
-/>
+<Frame caption="Website After Defacement">
+  <img
+    src="/images/three.png"
+    alt="Three Pn"
+    title="Three Pn"
+    style={{ width:"100%" }}
+  />
+</Frame>
 
 We can see in the Wazuh for the detection of file content changes. The rule id is 550 with the description is Integrity Checksum Changed.
 
-<img
-  src="/images/four.png"
-  alt="Four Pn"
-  title="Four Pn"
-  style={{ width:"100%" }}
-/>
+<Frame caption="Wazuh Integrity Check Detection">
+  <img
+    src="/images/four.png"
+    alt="Four Pn"
+    title="Four Pn"
+    style={{ width:"100%" }}
+  />
+</Frame>
