Documentation edits made through Mintlify web editor

--- a/installation.mdx
+++ b/installation.mdx
@@ -158,7 +158,7 @@ Create administrator account using **above mentioned credentials** and then logi
 
 <Frame caption="Figure 11. Shuffle Dashboard">
   <img
-    src="/images/shuffle-dashboard.png"
+    src="/images/shuffle-dashboard.jpeg"
     alt="Image(6) Pn"
     title="Image(6) Pn"
     style={{ width:"100%" }}
