Documentation edits made through Mintlify web editor

--- a/installation.mdx
+++ b/installation.mdx
@@ -516,13 +516,14 @@ Click the **Show Executions** button to open the **All Workflow Runs** panel. Yo
 
 Then, click on the alerts with the following icon.
 
-<img
-  src="/images/alerts.png"
-  alt="Alerts Pn"
-  title="Alerts Pn"
-  className="mx-auto"
-  style={{ width:"53%" }}
-/>
+<Frame>
+  <img
+    src="/images/alerts.png"
+    alt="Alerts Pn"
+    title="Alerts Pn"
+    style={{ width:"53%", margin:"auto" }}
+  />
+</Frame>
 
 If there’s nothing available yet, run the Brute-Force Simulation which is explained in Use Case section below in Use Case 1, then come back here.
 
